2_knative-istio.yaml
#apiVersion: serving.knative.dev/v1
#kind: Service
#metadata:
#  name: knative-app
#  annotations:
#    serving.knative.openshift.io/enablePassthrough: "true"
#spec:
#  traffic:
#    - latestRevision: true
#      percent: 100
#  template:
#    metadata:
#      annotations:
#        sidecar.istio.io/inject: "true"
#        sidecar.istio.io/rewriteAppHTTPProbers: "true"
#    spec:
#      containers:
#      - image: quay.io/openshift-knative/knative-eventing-sources-event-display:latest
#        name: user-container
#        readinessProbe:
#          successThreshold: 1
#          tcpSocket:
#            port: 0
#---
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: "knative-serving"
spec:
  mtls:
    mode: PERMISSIVE
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: knative-ingress-gateway
  namespace: knative-serving
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*"
      tls:
        mode: SIMPLE
        credentialName: client-credential
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
 name: knative-local-gateway
 namespace: knative-serving
spec:
 selector:
   istio: ingressgateway
 servers:
   - port:
       number: 8081
       name: http
       protocol: HTTP
     hosts:
       - "*"
---
apiVersion: v1
kind: Service
metadata:
 name: knative-local-gateway
 namespace: istio-system
 labels:
   experimental.istio.io/disable-gateway-port-translation: "true"
spec:
 type: ClusterIP
 selector:
   istio: ingressgateway
 ports:
   - name: http2
     port: 80
     targetPort: 8081
